syntax = "proto3";

option go_package = "https://github.com/meateam/fav-service/blob/develop/proto/fav.proto";


package favorite;

service Favorite {
    rpc CreateFavorite (CreateFavoriteRequest) returns (FavoriteObject) {}
    rpc DeleteFavorite (DeleteFavoriteRequest) returns (FavoriteObject) {}
    rpc GetAllFavoritesByUserID (GetAllFavoritesRequest) returns (GetAllFavoritesResponse) {}
    rpc IsFavorite (IsFavoriteRequest) returns (IsFavoriteResponse) {}
    rpc DeleteAllfileFav (DeleteAllfileFavRequest) returns (DeleteAllfileFavResponse) {}
}

message CreateFavoriteRequest {
    string userID = 1;
    string fileID = 2;
}

message DeleteFavoriteRequest {
    string userID = 1;
    string fileID = 2;
}

message FavoriteObject {
    string userID = 1;
    string fileID = 2;
}

message GetAllFavoritesRequest {
    string userID = 1;
}

message GetAllFavoritesResponse {
    
    repeated string FavFileIDList = 1;
}

message IsFavoriteRequest {
    string userID = 1;
    string fileID = 2;
}

message IsFavoriteResponse {
    bool IsFavorite = 1;
}

message DeleteAllfileFavRequest {
    string fileID = 1;
}

message DeleteAllfileFavResponse {
    bool acknownledged = 1;
    int32 deletedCount = 2;
}